[tool.poetry]
name = "micropython-libs"
version = "0.1.0"
description = "Custom libraries for MicroPython projects."
authors = ["Dustin L <r.dustin.lane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
micropython-esp32-s3-stubs = "^1.20.0.post1"
mpremote = "^1.20.0"
esptool = "^4.6.2"
autopep8 = "^2.0.4"
pylint = "^2.17.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
