[tool.poetry]
name = "micropython-libs"
version = "0.1.0"
description = "Custom libraries for MicroPython projects."
authors = ["Dustin L <r.dustin.lane@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
micropython-magic = "^0.10.2"
micropython-esp32-esp32_generic_s3-stubs = "^1.22.0.post1"
mpremote = "^1.20.0"
esptool = "^4.6.2"
autopep8 = "^2.0.4"
pylint = "^3.3.0"
ipytest = "^0.14.2"
ipykernel = "^6.28.0"
colorama = "^0.4.6"
pytest-mock = "^3.14.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
